--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.7",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
